--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
 nav {
   float: right;
   margin-top: -80px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 nav ul {
@@ -35,22 +35,106 @@ nav ul {
 nav ul li a {
   margin-right: 25px;
   color: white;
-  font-size: 25px;
+  font-size: 20px;
   text-decoration: none;
 }
 /* main section */
 
 .sec h2 {
-  font-size: 40px;
+  font-size: 35px;
 }
 .sec h1 {
-  font-size: 45px;
+  font-size: 40px;
 }
 .sec h4 {
   font-size: 30px;
+  margin: 15px 0;
+  width: 30%;
+  position: relative;
+  color: black;
+  text-transform: uppercase;
 }
-.contact-logo {
+.sec h4::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #ff4d4d;
+  border-right: 2px solid #ff4d4d;
+
+  overflow: hidden;
+  animation: slide 6s infinite;
 }
+@keyframes slide {
+  0%,
+  10%,
+  100% {
+    width: 0%;
+  }
+
+  70%,
+  90% {
+    width: 100%;
+  }
+}
+
 .contact-logo ul {
   display: flex;
+  list-style: none;
+}
+
+.contact-logo ul li {
+  margin: 20px 20px 40px 0;
+}
+.contact-logo img {
+  width: 80px;
+  margin-bottom: 10px;
+}
+.contact-logo img:hover {
+  animation: shake 0.6s infinite;
+  width: 82px;
+}
+button {
+  width: 120px;
+  margin-right: 40px;
+  border-radius: 8px;
+  border: none;
+  font-size: 20px;
+  font-weight: 300;
+  height: 50px;
+  background-color: #17a2b8;
+  color: white;
+  cursor: pointer;
+}
+button:hover {
+  animation: shake 0.6s infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+  25% {
+    transform: translate(1px, 1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, -1px) rotate(-1deg);
+  }
+  75% {
+    transform: translate(2px, -1px) rotate(2deg);
+  }
+  100% {
+    transform: translate(-1px, 1px) rotate(-1deg);
+  }
+}
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(26, 24, 24);
+  color: white;
+  text-align: center;
 }
